project/service-mesh/scripts_for_test/gateway_test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: group-4-test-gateway
  namespace: group-4-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
